# Custom_App_Spoofer

./: .gitignore  CMakeLists.txt  README.md  build.ps1
.github/workflows/: build.yml
hooker/src/dev/mi/appspoof/: HookBridge.java
module/: customize.sh  module.prop  service.sh
module/config/: config.toml
native/: oos_region_faker.cpp  zygisk.hpp
scripts/: build-module.ps1
